[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-submission"
version = "1.0.0"
description = "SQL Review OpenEnv environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openenv-core>=0.2.0",
  "fastapi",
  "uvicorn",
  "pydantic",
  "requests",
  "openai"
]

[project.scripts]
server = "server.app:app"
